# LiminalBD

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GRANT_BRIEF.md  LICENSE  README.md  READY_FOR_REVIEW.md  SECURITY.md
.github/workflows/: ci.yml  grant-pages.yml  security.yml
benchmark-data/data/: 00000001.wal
conformance/: Cargo.toml
conformance/src/: main.rs
docs/: ARCHITECTURE_ANALYSIS.md  BENCHMARKS.md  COGNITIVE_GARDEN_SCENARIO.md  EXPLAINABILITY_EVENT_CONTRACT.md  FIRST_CONTRIBUTOR_ISSUES.md  GRANT_LANDING.md  HARMONY_LOOP_BRIEF.md  IMPLEMENTATION_BACKLOG_P0_P1_P2.md  LANDING_PAGE.md  METRICS_GLOSSARY.md  ORIGIN.md  PHILOSOPHY.md  POSITIONING_V1.md  PROTOCOL.md  QUICKSTART_5_MIN.md  QUICK_WINS.md  RELEASE_COMPATIBILITY.md  STACK_DEMO.md  STRATEGIC_ROADMAP_2025.md  USE_CASE_IOT_MONITORING.md  USE_CASE_NORTH_STAR.md  WINDOWS_RUST.md  grant-landing.html  index.html  protocol-v0.1-legacy.md  protocol.md
docs/adr/: 000-template.md  001-biological-metaphor.md  README.md
docs/grants/: README.md  _template.html  nlnet-commons.html
examples/: iot-benchmark.rs
examples/rust-microservice/: Cargo.toml  README.md
examples/rust-microservice/src/: main.rs
examples/ts-bot/: README.md  package.json
examples/ts-bot/src/: index.mjs
examples/ts-dashboard/: README.md  index.html  package.json  tsconfig.json
examples/ts-dashboard/src/: main.ts
grants/: ADOPTION_PLAN_DONE_REPORT.md  NLNET_COMMONS_APPLICATION.md  NLNET_COMMONS_REPO_BRIEF.md  README.md  REVIEWER_ENTRYPOINT.md  STACK_EVIDENCE_SNAPSHOT_EN.md  STACK_EVIDENCE_SNAPSHOT_RU.md
liminal-db/: .gitignore  Cargo.toml  README.md
liminal-db/crates/liminal-bridge-abi/: Cargo.toml
liminal-db/crates/liminal-bridge-abi/include/: liminal.h
liminal-db/crates/liminal-bridge-abi/src/: ffi.rs  lib.rs  protocol.rs  wasm.rs
liminal-db/crates/liminal-bridge-net/: Cargo.toml
liminal-db/crates/liminal-bridge-net/src/: lib.rs  peers.rs  stream_codec.rs  ws_client.rs  ws_server.rs
liminal-db/crates/liminal-bridge-net/src/noetic/: consensus.rs  crdt.rs  mod.rs  state.rs
liminal-db/crates/liminal-cli/: Cargo.toml
liminal-db/crates/liminal-cli/src/: main.rs
liminal-db/crates/liminal-core/: Cargo.toml
liminal-db/crates/liminal-core/src/: awakening.rs  cluster_field.rs  dream_engine.rs  echo.rs  journal.rs  lib.rs  life_loop.rs  lql.rs  mirror.rs  morph_mind.rs  nlu.rs  node_cell.rs  recursion.rs  reflex.rs  resonant.rs  security.rs  seed.rs  seeds.rs  seeds_metrics.rs  summaries.rs  symmetry.rs  synchrony.rs  trs.rs  types.rs  variant.rs  views.rs
liminal-db/crates/liminal-core/src/reflex/: feedback.rs  mod.rs
liminal-db/crates/liminal-sal/: Cargo.toml
liminal-db/crates/liminal-sal/src/: lib.rs
liminal-db/crates/liminal-sensor/: Cargo.toml
liminal-db/crates/liminal-sensor/src/: host.rs  lib.rs
liminal-db/crates/liminal-store/: Cargo.toml
liminal-db/crates/liminal-store/src/: codec.rs  gc.rs  journal_impl.rs  lib.rs  snapshot.rs  wal.rs
liminal-db/crates/sal-adapters/sled/: Cargo.toml
liminal-db/crates/sal-adapters/sled/src/: lib.rs
liminal-db/docs/: PROTOCOL.md
protocol/: Cargo.toml  codegen.js  codegen.rs  codegen.ts  lql.ebnf  openapi.yaml
protocol/schemas/: commands.json  events.json
protocol/src/: lib.rs  main.rs
scripts/: demo-stack.ps1  windows-msvc-override.ps1
sdk/rust/: Cargo.toml
sdk/rust/examples/: basic_subscribe.rs  iot-benchmark.rs  live-benchmark.rs  seeds_demo.rs
sdk/rust/src/: lib.rs  protocol.rs
sdk/ts/: package.json  tsconfig.json
sdk/ts/src/: client.ts  index.ts  protocol-types.ts
