[workspace]
members = [
    "liminal-db/crates/liminal-core",
    "liminal-db/crates/liminal-sensor",
    "liminal-db/crates/liminal-cli",
    "liminal-db/crates/liminal-bridge-abi",
    "liminal-db/crates/liminal-bridge-net",
    "liminal-db/crates/liminal-store",
    "protocol",
    "sdk/rust",
    "conformance",
]
resolver = "2"
