[package]
name = "liminaldb-client"
version = "1.0.0"
edition = "2021"
description = "Official async Rust client for the LiminalDB protocol v1"
authors = ["LiminalDB"]
license = "Apache-2.0"
repository = "https://example.com/liminaldb"

[dependencies]
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-tungstenite = "0.20"
tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots"] }
url = "2"
tracing = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = "0.3"
