[package]
name = "liminal-bridge-net"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
ed25519-dalek = { version = "1", features = ["serde"] }
hex = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
serde_bytes = "0.11"
tokio = { version = "1", features = ["rt", "time", "macros", "sync", "net"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "tokio-native-tls", "connect"] }
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
tracing = "0.1"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
liminal-core = { path = "../liminal-core" }
async-trait = "0.1"
parking_lot = "0.12"
futures-util = "0.3"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
rand = "0.7"
