[package]
name = "liminal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
liminal-core = { path = "../liminal-core" }
liminal-sensor = { path = "../liminal-sensor" }
liminal-bridge-abi = { path = "../liminal-bridge-abi" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_cbor = "0.11"
hex = "0.4"
