[package]
name = "liminal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
liminal-core = { path = "../liminal-core" }
liminal-sensor = { path = "../liminal-sensor" }
liminal-bridge-abi = { path = "../liminal-bridge-abi" }
liminal-store = { path = "../liminal-store" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_cbor = "0.11"
hex = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
