[package]
name = "liminal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
serde_json = "1"
blake3 = "1"
